--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Surprise Birthday</title>
+    <title>Thun's Day</title>
+    <link rel="icon" href="https://gallery.yopriceville.com/var/albums/Free-Clipart-Pictures/Cartoons-PNG/Piglet_Winnie_the_Pooh_Friend_PNG_Picture.png?m=1629784368" type="image/x-icon">
+
     <style>
         body {
             font-family: 'Arial', sans-serif;
