--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     </script>
 </head>
 <body>
-    <h1>Happy Birthday Thun 20th</h1>
+    <h1>Happy 20th Birthday, Thun 💝 </h1>
     <div class="container">
         <img src="image/cake-svgrepo-com.svg" alt="เค้กวันเกิด" class="cake-svg">
     </div>
